# todolist_app

./: README.md  app.py  pyproject.toml
src/: __init__.py  config.py
src/auth/: __init__.py
src/core/auth/: __init__.py
src/core/board/: __init__.py
src/database/: todolist_db.py
src/models/: __init__.py  list.py  list_model.py  tag.py  task.py  task_model.py  user.py  user_model.py
src/routes/: __init__.py  auth.py  list.py  tag.py  task.py
src/services/: auth.py
src/templates/: edit.html  home.html  index.html  layout.html  list_new.html  list_view.html  new.html  view.html
src/templates/auth/: login.html  signup.html
src/templates/lists/: edit.html  index.html  new.html  show.html  upload.html
src/templates/tags/: index.html  new.html
src/templates/tasks/: edit.html  new.html  show.html
static/js/: flashes.js
