[tool.poetry]
name = "todolist-project"
version = "0.1.0"
description = ""
authors = ["Milka Sofia Ivanoff <ivanoffmilka@gmail.com>"]
readme = "README.md"
packages = [{include = "todolist_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
blackt = "^2024.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
